--- a/docs/topics_frontend/Персонализированные рекомендации.md
+++ b/docs/topics_frontend/Персонализированные рекомендации.md
@@ -1,36 +1,42 @@
 
-### Контентная фильтрация (Content-based filtering)
-Этот метод делает рекомендации на основе характеристик самих элементов и предпочтений пользователей. 
+| **Тип**             | **Основа рекомендаций**        | **Плюсы**                           | **Минусы**                   |
+| ------------------- | ------------------------------ | ----------------------------------- | ---------------------------- |
+| **Content-Based**   | Атрибуты объектов              | Работает для холодных пользователей | Ограниченный ассортимент     |
+| **Collaborative**   | Поведение других пользователей | Улавливает сложные паттерны         | Холодный старт, спам         |
+| **Demographic**     | Возраст/пол/локация            | Простота                            | Стереотипность               |
+| **Knowledge-Based** | Экспертные правила             | Точно для узких задач               | Требует ручной настройки     |
+| **Utility-Based**   | Контекстная полезность         | Гибкость                            | Сложность расчета полезности |
 
-**Пример**: Если пользователь любит фильмы жанра "научная фантастика" с определенным актером, система будет искать другие фильмы с этим жанром и/или актером и рекомендовать их.
+---
 
-**Как работает**:
-1. Анализирует характеристики элементов (например, жанр, актеры, авторы).
-2. Создает профиль пользователя на основе того, какие характеристики ему нравятся.
-3. Рекомендует элементы с похожими характеристиками.
+### **Когда что использовать?**
 
-### Коллаборативная фильтрация (Collaborative filtering)
-Этот метод делает рекомендации на основе поведения других пользователей.
+1. **Content-Based** [[Content-based filtering]]:
+    - Персональные ленты новостей.
+    - Нишевые сервисы (например, подбор музыки по тегам).
 
-**Пример**: Если пользователю A нравятся те же книги, что и пользователю B, и пользователь B недавно нашел новую книгу, которая ему понравилась, эта книга будет рекомендована пользователю A.
+2. **Collaborative** [[Collaborative filtering]]:
+    - Крупные маркетплейсы (Amazon, Netflix).
+    - Соцсети (рекомендации друзей, групп).
 
-**Как работает**:
-1. **User-user**: Ищет пользователей с похожими вкусами и рекомендует то, что нравится этим пользователям.
-2. **Item-item**: Ищет элементы, похожие на те, которые понравились пользователю, и рекомендует их.
+3. **Demographic** [[Demographic Filtering]]:
+    - Реклама, массовые товары.
 
-### Гибридный подход (Hybrid approach)
-Этот метод комбинирует оба вышеописанных подхода, чтобы улучшить точность рекомендаций.
+4. **Knowledge-Based** [[Knowledge-Based Filtering]]:
+    - Сложные товары (электроника, медицина).
+    - Системы с жесткими ограничениями (халяль, vegan).
 
-**Пример**: Система может сначала найти элементы, похожие на те, которые нравятся пользователю (контентная фильтрация), а затем отсортировать их по популярности среди пользователей с похожими вкусами (коллаборативная фильтрация).
+5. **Utility-Based** [[Utility-based]]:
+    - Сервисы с динамическим контекстом (такси, доставка еды).
+    - Управление спросом (скидки, акции).
 
-**Как работает**:
-1. Объединяет информацию о характеристиках элементов (контентная фильтрация) и предпочтения других пользователей (коллаборативная фильтрация).
-2. Комбинирует результаты для создания более точных рекомендаций.
+---
 
-### В чем разница?
+### **Гибридные системы**
 
-- **Контентная фильтрация** использует информацию о самом контенте (фильмы, книги, продукты) и предпочтения пользователя к этим характеристикам.
-- **Коллаборативная фильтрация** полагается на данные о взаимодействиях пользователей с элементами, не учитывая сами характеристики элементов.
-- **Гибридный подход** объединяет оба метода для улучшения качества рекомендаций, используя сильные стороны каждого из них.
+На практике часто комбинируют подходы. Например:
 
-Эти методы дополняют друг друга и часто используются вместе для создания более эффективных рекомендационных систем.
+- **Netflix**: Content-Based (жанры) + Collaborative (оценки пользователей).
+- **Amazon**: Collaborative + Utility-Based (ценность/наличие товара).
+
+Гибридные системы позволяют нивелировать недостатки отдельных методов.
