--- a/docs/topics_frontend/Продвинутые метрики.md
+++ b/docs/topics_frontend/Продвинутые метрики.md
@@ -1,22 +1,106 @@
-Метрики Coverage (покрытие), Diversity (разнообразие), Novelty (новизна) и Serendipity (счастливая случайность) относятся к онлайн и офлайн метрикам рекомендательных систем. 
+- [[#MAP vs nDCG?]]
 
-## **Coverage (Покрытие)**
-Эта метрика оценивает, какую часть из всех возможных элементов система способна рекомендовать пользователям. 
-Покрытие может быть рассчитано как офлайн (на статическом наборе данных) или онлайн (в реальном времени на живых данных).
-Считается как количество рекомендованных уникальных объектов на общее количество
+---
+## **1. Офлайн метрики (Offline Metrics)**
 
-## **Diversity (Разнообразие)**
-Оценивает, насколько рекомендации отличаются друг от друга.
-Разнообразие может быть измерено как офлайн, так и онлайн, но часто используется в офлайн тестах для сравнения различных алгоритмов.
-Считает в рамках одного пользователя степень похожесть порекомендованных объектов
+📌 **Используются при разработке модели**, оценивают точность рекомендаций на тестовых данных.
 
-## **Novelty (Новизна)**
-Измеряет, насколько новые или неизвестные элементы включены в рекомендации. 
-Новизну также можно оценивать как офлайн (на исторических данных) или онлайн (в реальном времени, основываясь на текущих взаимодействиях пользователей).
+### **1.1. Метрики точности (Accuracy Metrics)**
 
-$\Large\text{Novelty}(\text{item}) = 1 - \frac{\text{count}(\text{users recommended item})}{\text{count}(\text{users not interaced item})}$
+Измеряют, насколько хорошо система угадывает нужные рекомендации.
+
+#### **1.1.1. Precision@K** (Точность на K рекомендациях)
+
+$$\text{Precision@K} = \frac{|\text{relevant items} \cap \text{recommended items}@K|}{K}$$
+
+🔹 **Интуиция:** Из всех рекомендованных объектов, сколько действительно были полезны?  
+🔹 **Когда важен:** Если важна **чистота рекомендаций** (например, топ-5 фильмов).
+
+---
+
+#### **1.1.2. Recall@K** (Полнота на K рекомендациях)
+
+Recall@K=∣relevant items∩recommended items@K∣∣all relevant items∣\text{Recall@K} = \frac{|\text{relevant items} \cap \text{recommended items}@K|}{|\text{all relevant items}|}
+
+🔹 **Интуиция:** Из всех полезных объектов, сколько мы угадали?  
+🔹 **Когда важен:** Если важно **не пропускать важные объекты** (например, рекомендации вакансий).
+
+---
+
+#### **1.1.3. MAP@K (Mean Average Precision)**
+
+MAP@K=1∣U∣∑u=1∣U∣1K∑k=1KP(k)⋅rel(k)MAP@K = \frac{1}{|U|} \sum_{u=1}^{|U|} \frac{1}{K} \sum_{k=1}^{K} P(k) \cdot rel(k)
+
+🔹 **Интуиция:** Среднее Precision@K, учитывающее **порядок рекомендаций**.  
+🔹 **Когда важен:** Если важно **не только что порекомендовать, но и в каком порядке**.
+
+---
+
+### **1.2. Метрики ранжирования (Ranking Metrics)**
+
+Оценивают порядок выдачи рекомендаций.
+
+#### **1.2.1. NDCG@K (Normalized Discounted Cumulative Gain)**
+
+$$NDCG@K = \frac{DCG@K}{IDCG@K}, \quad DCG@K = \sum_{i=1}^{K} \frac{\text{rel}_i}{\log_2(i+1)}$$
+
+🔹 **Интуиция:** Чем **выше** релевантный объект в списке, тем **лучше**.  
+🔹 **Когда важен:** В поисковых системах, рекомендациях статей, фильмов.
+
+---
+
+#### **1.2.2. MRR (Mean Reciprocal Rank)**
+
+$$MRR = \frac{1}{|U|} \sum_{u=1}^{|U|} \frac{1}{\text{rank of first relevant item}}$$
+
+🔹 **Интуиция:** Чем раньше встречается **первый полезный объект**, тем лучше.  
+🔹 **Когда важен:** В чат-ботах, поисковых системах.
 
 
-## **Serendipity (Счастливая случайность)**
-Оценивает способность системы рекомендовать неожиданные и полезные элементы. 
-Serendipity часто измеряется в онлайн среде, так как требует реальных реакций пользователей на неожиданные рекомендации, но также может оцениваться офлайн для анализа потенциала системы.
+
+# MAP vs nDCG?
+1. **Используйте MAP@K**, если:
+    
+    - Релевантность бинарная.
+        
+    - Важно количество релевантных объектов в топ-K.
+        
+    - Порядок среди релевантных объектов не критичен (например, все подходящие товары в рекомендациях равнозначны).
+        
+2. **Используйте nDCG@K**, если:
+    
+    - Релевантность имеет степени (например, рейтинги 1–5).
+        
+    - Критичен порядок (более релевантные объекты должны быть выше).
+        
+    - Ошибки на первых позициях важнее, чем на последних.
+---
+
+### **1.3. Метрики новизны и разнообразия**
+
+Измеряют, насколько **рекомендации разные и неожиданные**.
+
+#### **1.3.1. Diversity (Разнообразие)**
+
+$$\text{Diversity} = 1 - \frac{1}{|U|} \sum_{u} \frac{1}{K^2} \sum_{i,j} \text{sim}(i, j)$$
+
+🔹 **Интуиция:** Рекомендации должны быть **разными**, а не одинаковыми.  
+🔹 **Когда важен:** В e-commerce (если человек купил ноутбук, не надо рекомендовать 5 таких же).
+
+---
+
+#### **1.3.2. Novelty (Новизна)**
+
+$$\text{Novelty} = -\sum p(i) \log p(i)$$
+
+🔹 **Интуиция:** Рекомендации должны включать **редкие или неизвестные объекты**.  
+🔹 **Когда важен:** В музыкальных сервисах (рекомендации новых исполнителей).
+
+---
+
+#### **1.3.3. Serendipity (Неожиданность)**
+
+$$\text{Serendipity} = \frac{1}{|U|} \sum_{u} \frac{1}{K} \sum_{i} (1 - P(i|u)) \cdot rel(i)$$
+
+🔹 **Интуиция:** Хорошая рекомендация — это **приятный сюрприз**, а не просто очевидное предложение.  
+🔹 **Когда важен:** В кино, музыке, книгах (рекомендации нового жанра).
